overflow-y scroll fix

--- a/static/styles/fragments/scheduleView.css
+++ b/static/styles/fragments/scheduleView.css
@@ -11,5 +11,5 @@
     width: 100%;
     height: calc(100% - 22em - 1px);
 
-    overflow: scroll;
+    overflow-y: scroll;
 }
